# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json  docker-compose.yml
.claude/skills/cerebras/: SKILL.md
backend/: database.py  main.py  pyproject.toml  test_main.py
backend/tests/: test_auth_and_docs.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/doc/[slug]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/nda/: page.tsx
frontend/components/: AuthGuard.tsx  CatalogPage.tsx  ChatPanel.tsx  DisclaimerModal.tsx  DocCreator.tsx  DocForm.tsx  DocPreview.tsx  NDACreator.tsx  NDAForm.tsx  NDAPreview.tsx
frontend/lib/: catalog.ts  session.ts  types.ts
scripts/: start-linux.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE.txt
